tests/algorithms/transpiler/Zig/data_structures/stacks/stack_with_singly_linked_list.error
exit status 1
/workspace/mochi/tests/algorithms/transpiler/Zig/data_structures/stacks/stack_with_singly_linked_list.zig:57:10: error: unused function parameter