tests/algorithms/transpiler/Zig/data_structures/stacks/stack_with_singly_linked_list.zig
// Generated by Mochi Zig transpiler on 2025-08-24 23:17 +0700
const std = @import("std");

fn handleError(err: anyerror) noreturn {
    std.debug.panic("{any}", .{err});
}

const Node = struct {
    value: []const u8,
    next: i64,
};

const Stack = struct {
    nodes: []Node,
    top: i64,
};

const PopResult = struct {
    stack: Stack,
    value: []const u8,
};

fn empty_stack() Stack {
    return .{ .nodes = (&[_]Node{})[0..0], .top = 0 -% 1 };
}

fn is_empty(stack: *const Stack) bool {
    return stack.top == 0 -% 1;
}

fn push(stack_1: *const Stack, item: []const u8) Stack {
    const new_node: Node = .{ .value = item, .next = stack_1.top };
    var new_nodes: []Node = stack_1.nodes;
    new_nodes = new_nodes;
    new_nodes = blk0: { var _tmp = std.ArrayList(Node).initCapacity(std.heap.page_allocator, 0) catch |err| handleError(err); _tmp.appendSlice(@as([]const Node, new_nodes)) catch |err| handleError(err); _tmp.append(new_node) catch |err| handleError(err); break :blk0 (_tmp.toOwnedSlice() catch |err| handleError(err)); };
    const new_top: i64 = @as(i64, @intCast(new_nodes.len)) -% 1;
    return .{ .nodes = new_nodes, .top = new_top };
}

fn pop(stack_2: *const Stack) PopResult {
    if (stack_2.top == 0 -% 1) {
        @panic("pop from empty stack");
    }
    const node: Node = stack_2.nodes[_idx(stack_2.nodes.len, stack_2.top)];
    const new_stack: Stack = .{ .nodes = stack_2.nodes, .top = node.next };
    return .{ .stack = new_stack, .value = node.value };
}

fn peek(stack_3: *const Stack) []const u8 {
    if (stack_3.top == 0 -% 1) {
        @panic("peek from empty stack");
    }
    const node_1: Node = stack_3.nodes[_idx(stack_3.nodes.len, stack_3.top)];
    return node_1.value;
}

fn clear(stack_4: *const Stack) Stack {
    return .{ .nodes = (&[_]Node{})[0..0], .top = 0 -% 1 };
}

fn mochi_main() void {
    var stack_5: Stack = empty_stack();
    stack_5 = stack_5;
    std.debug.print("{s}\n", .{_str(is_empty(&stack_5))});
    stack_5 = push(&stack_5, "5");
    stack_5 = push(&stack_5, "9");
    stack_5 = push(&stack_5, "python");
    std.debug.print("{s}\n", .{_str(is_empty(&stack_5))});
    var res: PopResult = pop(&stack_5);
    res = res;
    stack_5 = res.stack;
    std.debug.print("{s}\n", .{res.value});
    stack_5 = push(&stack_5, "algorithms");
    res = pop(&stack_5);
    stack_5 = res.stack;
    std.debug.print("{s}\n", .{res.value});
    res = pop(&stack_5);
    stack_5 = res.stack;
    std.debug.print("{s}\n", .{res.value});
    res = pop(&stack_5);
    stack_5 = res.stack;
    std.debug.print("{s}\n", .{res.value});
    std.debug.print("{s}\n", .{_str(is_empty(&stack_5))});
}

pub fn main() void {
    {
        const __start = _now();
        const __start_mem: i64 = _mem();
        mochi_main();
        const __end = _now();
        const __end_mem: i64 = _mem();
        const __duration_us: i64 = @divTrunc(@as(i64, @intCast(__end - __start)), 1000);
        const __mem_diff: i64 = __end_mem - __start_mem;
        const __memory_bytes: i64 = if (__mem_diff < 0) -__mem_diff else __mem_diff;
        std.debug.print("{{\"duration_us\":{d},\"memory_bytes\":{d},\"name\":\"main\"}}\n", .{__duration_us, __memory_bytes});
    }
}

var _now_seed: i64 = 0;
var _now_seeded: bool = false;
fn _now() i64 {
    if (_now_seeded) {
        _now_seed = @mod(_now_seed * 1664525 + 1013904223, 2147483647);
        return _now_seed;
    }
    if (! _now_seeded) {
        if (std.process.getEnvVarOwned(std.heap.page_allocator, "MOCHI_NOW_SEED")) |env_seed| {
            defer std.heap.page_allocator.free(env_seed);
            if (std.fmt.parseInt(i64, env_seed, 10)) |v| {
                _now_seed = v;
                _now_seeded = true;
                _now_seed = @mod(_now_seed * 1664525 + 1013904223, 2147483647);
                return _now_seed;
            } else |_| {}
        } else |_| {}
    }
    return @as(i64, @intCast(std.time.nanoTimestamp()));
}

fn _idx(len: usize, i: i64) usize {
    return if (i < 0 or i >= @as(i64, @intCast(len))) 0 else @as(usize, @intCast(i));
}

fn _str(v: anytype) []const u8 {
    if (@TypeOf(v) == f64 or @TypeOf(v) == f32) {
        return std.fmt.allocPrint(std.heap.page_allocator, "{d}", .{v}) catch unreachable;
    }
    const info = @typeInfo(@TypeOf(v));
    switch (info) {
    .Pointer => |p| {
        if (p.size == .Slice) {
            var out = std.ArrayList(u8).init(std.heap.page_allocator);
            defer out.deinit();
            out.append('[') catch unreachable;
            for (v, 0..) |e, i| {
                if (i != 0) { out.append(' ') catch unreachable; }
                const s = _str(e);
                out.appendSlice(s) catch unreachable;
            }
            out.append(']') catch unreachable;
            return out.toOwnedSlice() catch unreachable;
        }
    },
    .Struct => |_| {
        if (@hasDecl(@TypeOf(v), "iterator")) {
            const KVPair = struct{ ks: []const u8, vs: []const u8 };
            var pairs = std.ArrayList(KVPair).init(std.heap.page_allocator);
            defer pairs.deinit();
            var it = v.iterator();
            while (it.next()) |e| {
                const ks = _str(e.key_ptr.*);
                const vs = _str(e.value_ptr.*);
                pairs.append(.{ .ks = ks, .vs = vs }) catch unreachable;
            }
            std.sort.heap(KVPair, pairs.items, {}, struct {
                pub fn less(_: void, a: KVPair, b: KVPair) bool {
                    return std.mem.lessThan(u8, a.ks, b.ks);
                }
            }.less);
            var out = std.ArrayList(u8).init(std.heap.page_allocator);
            defer out.deinit();
            out.appendSlice("map[") catch unreachable;
            for (pairs.items, 0..) |e, i| {
                if (i != 0) { out.append(' ') catch unreachable; }
                out.appendSlice(e.ks) catch unreachable;
                out.append(':') catch unreachable;
                out.appendSlice(e.vs) catch unreachable;
            }
            out.append(']') catch unreachable;
            return out.toOwnedSlice() catch unreachable;
        }
    },
    else => {},
    }
    return std.fmt.allocPrint(std.heap.page_allocator, "{any}", .{v}) catch unreachable;
}

fn _mem() i64 {
    const path = "/proc/self/statm";
    var file = std.fs.openFileAbsolute(path, .{}) catch return 0;
    defer file.close();
    var buf: [64]u8 = undefined;
    const n = file.readAll(&buf) catch return 0;
    var it = std.mem.tokenizeScalar(u8, buf[0..n], ' ');
    _ = it.next(); // total program size
    if (it.next()) |tok| {
        const pages = std.fmt.parseInt(i64, tok, 10) catch return 0;
        return pages * @as(i64, @intCast(std.mem.page_size));
    }
    return 0;
}

fn _print(v: []const u8) void {
    std.debug.print("{s}\n", .{v});
}
